gcc/testsuite/gdc.test/compilable/imports/test15371.d
module imports.test15371;

struct A
{
    private int a;
    private void fun() {}
    private void fun(int, int) {}
    public void fun(int) {}
}
