gcc/testsuite/gdc.test/fail_compilation/imports/imp18979.d
module imports.imp18979;

struct Foo
{
    private this(A)(A a) {}
}
